# panoptocord

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: dockerpublish.yml
src/: main.rs  webhook.rs
