[package]
name = "panoptocord"
version = "0.1.0"
authors = ["comp500 <comp500@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.0"
random_color = "0.4"
futures = "0.3"
anyhow = "1.0"
# I should not have to import this :(
failure = "0.1"

[dependencies.serenity]
version = "0.8.6"
default-features = false
features = ["utils"]

[dependencies.oauth2]
version = "3.0.0-alpha.9"
default-features = false
features = ["futures-03", "reqwest-010"]
