[package]
name = "panoptocord"
version = "0.1.0"
authors = ["comp500 <comp500@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/comp500/panoptocord.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"
random_color = "0.6"
futures = "0.3"
anyhow = "1.0"
oauth2 = "4.1"